<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Unaerobic</string>
    <string name="articles">Articles</string>
    <string name="videos">Videos</string>
    <string name="ranking">Ranking</string>
    <string name="info_title">Info</string>
    <string name="heart">Heart</string>
    <string name="tables">Tables</string>
    <string name="credits_email">insomniac.robot@gmail.com</string>
    <string name="info">
        - Press \"+\" button to add new table or cycle\n
        - Press volume icon to customize voice alarms\n
        - Long press on cycle or table to remove\n
        If you wish your language to be added, please
        send articles, sounds and translated text.
        Or exciting youtube clips. \n
        \t\t Good luck in your dive
    </string>

    <string name="new_version_info">
        Hi, guys!
        I am developing a new version of app - with heart rate monitoring.
        I\'ve already made camera monitoring, like in Instant Heart Rate app.
        Now I am looking for oximeter to connect to via bluetooth.
        If you have one with bluetooth (especially Zephyr or ChoiceMmed MDC300C318) -
        please, contact me.
    </string>

    <string name="translated">
    </string>
    <string name="translated_email">
    </string>
    <string name="noConnect">Sorry,you must be connected to internet</string>
    <string name="noConnectArt">Sorry,you must be connected to internet \n to read this article</string>
    <string name="noConnectVid">Sorry,you must be connected to internet \n to watch this video</string>
    <string name="credits">For propositions and critics write on: \ninsomniac.robot@gmail.com</string>
    <string name="under_construction">Sorry, under construction</string>
    <string name="disipline_prompt">discipline</string>

    <string name="minutes1">minute</string>
    <string name="minutes2">2 minutes</string>
    <string name="minutes3">3 minutes</string>
    <string name="minutes4">4 minutes</string>
    <string name="minutes5">5 minutes</string>
    <string name="seconds30">30 seconds</string>
    <string name="seconds10">10 seconds</string>
    <string name="seconds5">5 seconds</string>
    <string name="start">start</string>
    <string name="tostart">TO START</string>
    <string name="afterstart">AFTER START</string>
    <string name="breathe">breathe</string>
    <string name="voices">Voices</string>
    <string name="new_table">New table</string>
    <string name="new_cycle">New cycle</string>
    <string name="hold_s">hold, s</string>
    <string name="breath_s">breath, s</string>
    <string name="breathe_time">breathe\n time</string>
    <string name="hold_time">hold\n time</string>
    <string name="updated">"updated: "</string>
    <string name="today">" today"</string>
    <string name="post">-----------------------------1397366148113562428080587968\n
        Content-Disposition: form-data; name="Lang"  \n
        \n
        EN
        \n-----------------------------1397366148113562428080587968\n
        Content-Disposition: form-data; name="sort"    \n
        \n

        \n-----------------------------1397366148113562428080587968\n
        Content-Disposition: form-data; name="start"     \n
        \n

        \n-----------------------------1397366148113562428080587968\n
        Content-Disposition: form-data; name="rnkReport"   \n
        \n
        REPORT
        \n-----------------------------1397366148113562428080587968\n
        Content-Disposition: form-data; name="rnkScope"    \n
        \n

        \n-----------------------------1397366148113562428080587968\n
        Content-Disposition: form-data; name="rnkCompr"   \n
        \n

        \n-----------------------------1397366148113562428080587968\n
        Content-Disposition: form-data; name="rnkCompn"   \n
        \n

        \n-----------------------------1397366148113562428080587968\n
        Content-Disposition: form-data; name="rnkOrgNm"   \n
        \n

        \n-----------------------------1397366148113562428080587968\n
        Content-Disposition: form-data; name="rnkRelative"   \n
        \n

        \n-----------------------------1397366148113562428080587968\n
        Content-Disposition: form-data; name="rnkAllDisc"   \n
        \n

        \n-----------------------------1397366148113562428080587968\n
        Content-Disposition: form-data; name="rnkRgn2"    \n
        \n

        \n-----------------------------1397366148113562428080587968\n
        Content-Disposition: form-data; name="rnkFed2"   \n
        \n

        \n-----------------------------1397366148113562428080587968\n
        Content-Disposition: form-data; name="rnkDisc"    \n
        \n
        DYN
        \n-----------------------------1397366148113562428080587968\n
        Content-Disposition: form-data; name="rnkGender"   \n
        \n
        F
        \n-----------------------------1397366148113562428080587968\n
        Content-Disposition: form-data; name="rnkMode"     \n
        \n

        \n-----------------------------1397366148113562428080587968\n
        Content-Disposition: form-data; name="rnkRegn"    \n
        \n

        \n-----------------------------1397366148113562428080587968\n
        Content-Disposition: form-data; name="rnkClub"    \n
        \n

        \n-----------------------------1397366148113562428080587968\n
        Content-Disposition: form-data; name="rnkComprNm"     \n
        \n

        \n-----------------------------1397366148113562428080587968\n
        Content-Disposition: form-data; name="rnkCompnNm"    \n
        \n

        \n-----------------------------1397366148113562428080587968\n
        Content-Disposition: form-data; name="rnkYear"     \n
        \n

        \n-----------------------------1397366148113562428080587968\n
        Content-Disposition: form-data; name="rnkFede"      \n
        \n

        \n-----------------------------1397366148113562428080587968\n
        Content-Disposition: form-data; name="rnkSrc"      \n
        \n

        \n-----------------------------1397366148113562428080587968\n
        Content-Disposition: form-data; name="admin"        \n
        \n

        \n-----------------------------1397366148113562428080587968\n
        Content-Disposition: form-data; name="pageID"     \n
        \n

        \n-----------------------------1397366148113562428080587968\n
        Content-Disposition: form-data; name="pg"        \n
        \n

        \n-----------------------------1397366148113562428080587968\n
        Content-Disposition: form-data; name="sid"        \n
        \n
        86e000e1899bd0cfe1ae93e8345d4849
        \n-----------------------------1397366148113562428080587968\n
        Content-Disposition: form-data; name="lastSearch"    \n
        \n

        \n-----------------------------1397366148113562428080587968\n
        Content-Disposition: form-data; name="cleanText"    \n
        \n

        \n-----------------------------1397366148113562428080587968\n
        Content-Disposition: form-data; name="url"         \n
        \n

        \n-----------------------------1397366148113562428080587968\n
        Content-Disposition: form-data; name="origLocation"    \n
        \n

        \n-----------------------------1397366148113562428080587968\n
        Content-Disposition: form-data; name="origPageID"   \n
        \n

        \n-----------------------------1397366148113562428080587968\n
        Content-Disposition: form-data; name="logOut"       \n
        \n

        \n-----------------------------1397366148113562428080587968\n
        Content-Disposition: form-data; name="logInNow"    \n
        \n

        \n-----------------------------1397366148113562428080587968\n
        Content-Disposition: form-data; name="mediaTp"     \n
        \n

        \n-----------------------------1397366148113562428080587968\n
        Content-Disposition: form-data; name="langSel"    \n
        \n

        \n-----------------------------1397366148113562428080587968\n
        Content-Disposition: form-data; name="catSel"       \n
        \n

        \n-----------------------------1397366148113562428080587968\n
        Content-Disposition: form-data; name="pageSzt"    \n
        \n

        \n-----------------------------1397366148113562428080587968--</string>
    <string name="sendingRequest">downloading info …</string>
    <string name="show">Show</string>
    <string name="discipline">Discipline:</string>
    <string name="disc_hint">Don\'t know what is it? Click \t</string>
    <string name="here">here</string>
    <string name="new_table_name">New table name</string>
    <string name="add">add</string>
    <string name="edit_sounds">edit sounds</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="timer_00">00:00</string>
    <string name="breathe_s">breath,s</string>
    <string name="powered_by">powered by</string>
    <string name="repeat">repeat</string>
    <string name="rate_us">Rate us!</string>
    <string name="x_times">times</string>
    <string name="gen_cycles">generates cycles, each is x% of previous</string>
    <string name="vibro">vibro</string>
    <string name="no_history">no history yet</string>
    <string name="comment">comment</string>
    <string name="sounds">sounds</string>
    <string name="how_it_works">how it works</string>
    <string name="stop_timer">stop timer</string>
    <string name="contraction">contraction</string>
    <string name="add_table">add table</string>
    <string name="add_cycle">add cycle</string>
    <string name="statistics">statistics</string>
    <string name="cycles">Cycles</string>
    <string name="time_s">Time, s</string>
    <string name="save">save</string>
    <string name="extended_man">Extended manual</string>
    <string name="hold_hint">can\'t hold anymore - \n long press here</string>


</resources>
