<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:padding="10dp"
              android:gravity="right"
              android:background="#FF000000"
        >

    <com.kovalenych.roboto.TextViewRoboto
            android:id="@+id/infot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info"
            android:textSize="16dp"
            />
    <com.kovalenych.roboto.TextViewRoboto
            android:id="@+id/translated_by"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/translated"
            android:textColor="@color/roboto_blue"
            android:textSize="16dp"
            android:singleLine="true"
            android:background="@color/blue"
            />

    <LinearLayout

            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:gravity="center"
            android:baselineAligned="false">
        <LinearLayout
                android:id="@+id/you_tubeman"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:gravity="center"
                >
            <ImageView
                    android:background="@color/blue"
                    android:layout_marginLeft="5pt"
                    android:layout_height="20pt"
                    android:layout_width="20pt"
                    android:src="@drawable/you_tube"
                    />

            <com.kovalenych.roboto.TextViewRoboto
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/extended_man"
                    />

        </LinearLayout>

        <LinearLayout
                android:id="@+id/stars"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                >
            <LinearLayout

                    android:layout_height="20pt"
                    android:layout_width="fill_parent"
                    android:gravity="center"
                    >

                <ImageView
                        android:layout_marginLeft="5pt"
                        android:layout_height="10pt"
                        android:layout_width="10pt"
                        android:src="@drawable/star"
                        />
                <ImageView
                        android:layout_height="10pt"
                        android:layout_width="10pt"
                        android:src="@drawable/star"
                        />
                <ImageView
                        android:layout_height="10pt"
                        android:layout_width="10pt"
                        android:src="@drawable/star"
                        />
                <ImageView
                        android:layout_height="10pt"
                        android:layout_width="10pt"
                        android:src="@drawable/star"
                        />
                <ImageView
                        android:layout_height="10pt"
                        android:layout_width="10pt"
                        android:src="@drawable/star"
                        />
            </LinearLayout>
            <com.kovalenych.roboto.TextViewRoboto
                    android:id="@+id/rateus"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/rate_us"
                    />
        </LinearLayout>


    </LinearLayout>
    <com.kovalenych.roboto.TextViewRoboto
            android:layout_marginTop="2pt"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/credits"
            android:textSize="6pt"
            />
    <com.kovalenych.roboto.TextViewRoboto
            android:id="@+id/mailto"
            android:layout_marginTop="2pt"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/credits_email"
            android:textColor="@color/roboto_blue"
            android:textSize="6pt"
            />

</LinearLayout>